--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,3 +31,53 @@ h1,h2,h3,h4,h5,h6{
 .col-12 {width: 100%;}
 
 
+/*********************************
+*************Gallery**************
+*********************************/
+
+
+#gallerypage .allimages {
+  column-count: 3;
+  margin: 0 auto;
+}
+
+#gallerypage .allimages .image {
+  position: relative;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+#gallerypage .allimages .image img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease-in-out;
+}
+
+#gallerypage .allimages .image .overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(236, 29, 37, 0);
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.3s ease-in-out;
+  text-align: center;
+  opacity: 0;
+}
+
+#gallerypage .allimages .image .overlay i {
+  color: #fff;
+  font-size: 30px;
+  margin: 24% 0;
+}
+
+#gallerypage .allimages .image:hover img {
+  transform: scale(1.2);
+}
+
+#gallerypage .allimages .image:hover .overlay {
+  background: #0000809c;
+  opacity: 1;
+}
+
