--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -81,3 +81,20 @@ h1,h2,h3,h4,h5,h6{
   opacity: 1;
 }
 
+@media screen and (max-width: 900px){
+  [class*="col-"]{
+    width: 50%;
+  }
+  #gallerypage .allimages {
+    column-count: 2;
+  }
+}
+
+@media screen and (max-width: 575px){
+  [class*="col-"]{
+    width: 100%;
+  }
+  #gallerypage .allimages {
+    column-count: 1;
+  }
+}
