--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -4,7 +4,7 @@
 {% block title %} {{title}} {% endblock %}
 {% block content %}
 
-  <p>Gallery</p>
+  <h2 class='text-center'>NYOTA COLLECTIONS</h2>
 
   <div id="gallerypage" class='mt-5 mb-5'>
     <div class="container">
