--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -11,6 +11,7 @@
   <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
+  {% include 'navbar.html' %}
 
   <div class="container contbody">
     {% block content %}
