--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -16,7 +16,9 @@
               <i class="fad fa-layer-group"></i> Categories 
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
+              {% for category in categories %}
+                <a class="dropdown-item" href="#">{{category|capfirst}}</a>
+              {% endfor %}
             </div>
           </div>
 
@@ -25,7 +27,9 @@
               <i class="fad fa-map-marker-alt"></i> Locations 
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
+              {% for location in locations %}
+                <a class="dropdown-item" href="#">{{location|capfirst}}</a>
+              {% endfor %}
             </div>
           </div>
 
