--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -12,8 +12,8 @@
       </li>
 
     </ul>
-    <form class="form-inline my-2 my-lg-0 d-flex justify-content-center align-items-center">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search Category..." aria-label="Search">
+    <form class="form-inline my-2 my-lg-0 d-flex justify-content-center align-items-center" action='{% url "search" %}'>
+      <input class="form-control mr-sm-2" type="search" placeholder="Search Category..." name="search" aria-label="Search">
       <button class="btn btn-light my-2 my-sm-0" type="submit"><i class='fas fa-search'></i></button>
     </form>
   </div>
