--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   <h2 class='text-center'>NYOTA COLLECTIONS</h2>
-
+  <h5 class="text-center">All Photos {{ photos.count }}</h5>
   <div class="addons">
     <div class="container-fluid">
       <div class="row">
@@ -13,22 +13,22 @@
         <div class="col-6 cats-loc d-flex justify-content-end align-items-center">
           <div class="dropdown m-1">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fad fa-layer-group"></i> Categories 
+              <i class="fad fa-layer-group"></i> Categories {{categories.count}}
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               {% for category in categories %}
-                <a class="dropdown-item" href="#">{{category|capfirst}}</a>
+                <a class="dropdown-item" href="/search/?search={{ category }}">{{category|capfirst}}</a>
               {% endfor %}
             </div>
           </div>
 
           <div class="dropdown m-1">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fad fa-map-marker-alt"></i> Locations 
+              <i class="fad fa-map-marker-alt"></i> Locations {{locations.count}}
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
               {% for location in locations %}
-                <a class="dropdown-item" href="#">{{location|capfirst}}</a>
+                <a class="dropdown-item" href="/search/?search={{ location }}">{{location|capfirst}}</a>
               {% endfor %}
             </div>
           </div>
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="container">
     <div id="gallerypage" class='mt-5 mb-5'>
       <div class="container">
