title heading add

--- a/gallery/templates/searchresult.html
+++ b/gallery/templates/searchresult.html
@@ -6,7 +6,8 @@
 
   <h2 class='text-center'>NYOTA COLLECTIONS</h2>
 
-  
+  <h5 class="text-center">Search Results for {{ searchTerm }}</h5>
+  <h6 class='text-center'>Photos Found {{ totalsearch }}</h6>
   <div class="container">
     <div id="gallerypage" class='mt-5 mb-5'>
       <div class="container">
