--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav m-auto text-center">
       <li class="nav-item active">
-        <a class="nav-link" href="/">HOME</a>
+        <a class="nav-link" href="/"></a>
       </li>
 
     </ul>
