--- a/gallery/templates/searchresult.html
+++ b/gallery/templates/searchresult.html
@@ -11,24 +11,50 @@
   </div>
   <h5 class="text-center">Search Results for {{ searchTerm }}</h5>
   <h6 class='text-center'>Photos Found {{ totalsearch }}</h6>
+
   <div class="container">
     <div id="gallerypage" class='mt-5 mb-5'>
       <div class="container">
-        <div class="allimages" id="image-popups">
+        <div class="allimages">
           {% for photo in categorysearchresult %}
-            <a href="{{ photo.image.url }}" class="hinge" data-effect="mfp-zoom-out" title="">
-              <div class="image m-1 m-md-3 mt-md-0">
-                <img src="{{ photo.image.url }}" alt="{{ photo.image_name }}" class="img-fluid">
-                <div class="overlay d-flex justify-content-center align-items-center">
-                  <i class="fa fa-plus"></i>
+            <div class="image mt-2 " data-toggle="modal" data-target="#modal{{photo.id}}">
+              <img src="{{ photo.image.url }}" alt="{{ photo.image_name }}" class="img-fluid">
+              <div class="overlay d-flex justify-content-center align-items-center">
+                <i class="fa fa-plus"></i>
+              </div>
+            </div>
+
+            <div class="modal fade" id="modal{{photo.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-fullscreen" role="document">
+                <div class="modal-content">
+                  <div class="modal-body">
+                    <img src="{{ photo.image.url }}" alt="{{ photo.image_name }}" id='img{{photo.id}}'  value='{{ photo.image.url }}' class="img-fluid modalsize">
+                    <div class="description">
+                      <div class="d-flex justify-content-around align-items-center">
+                        <span>Location: {{ photo.location_id }}</span>
+                        <span>Category: {{ photo.category_id }}</span>
+                      </div>
+                      <p>{{ photo.image_description }}</p>
+                    </div>
+                  </div>
+
+                  <div class="modal-footer">
+                    <button class="btn" data-dismiss="modal">Close</button>
+                    <button class="btn btn-outline-secondary tocopy" data-clipboard-target="#img{{photo.id}}">Copy to ClipBoard</button>
+                  </div>
                 </div>
               </div>
-            </a>
+            </div>
           {% endfor %}
         </div>
       </div>
     </div>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
+  <script>
+    new ClipboardJS('.tocopy');
+  </script>
 
 {% endblock %}
 
